# od-client

./: README.md  index.html  package-lock.json  package.json  shell.nix  test.html  test.py
.github/docs/: CODEOWNERS
.github/workflows/: npm.yml  npm_linter.yml  rust.yml  rust_linter.yml  rust_test.yml
docs/: android_build_guide.md
src/: App.vue  AppWrapper.vue  UserMessage.vue  UserProfile.vue  app.js  main.ts  style.css  websocket.js  websocket.jsx
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/scripts/: postinstall.sh
src-tauri/src/: lib.rs  main.rs  net.rs  prelude.rs  statics.rs
src-tauri/src/api/: channels.rs  messages.rs  mod.rs  servers.rs  spell_caster.rs  users.rs
src-tauri/src/fs/: mod.rs
src-tauri/src/structures/: mod.rs
src-tauri/windows/fragments/: credentials.wxs
src/components/: channelList.vue  chatWindow.vue  gifPicker.vue  login.vue  messageItem.vue  serverList.vue  serverListItem.vue  serverUsersList.vue  serverUsersListItem.vue  settings.vue
src/components/messages/: ImageMessage.vue  VideoMessage.vue
