[package]
name = "division-client"
version = "0.0.3"
description = "An open-source and GPL-free VoIP and instant messaging app."
authors = ["kickhead13"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "od_client_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
crossbeam-channel = "0.5.15"
openssl = "0.10.72"
glib = "0.20.0"
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version="0.12.15", features = ["blocking", "rustls-tls"] }
base64 = "0.22.1"
